dpkg (1.18.1) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Cast c_isbits() c argument to an unsigned char when indexing the array.
    This fixes build failures on armel, armhf, ppc64el and s390x.
  * Do not allow pathnames with embedded newlines in dpkg-deb and dpkg.
    Closes: #720761
  * Perl modules:
    - Add missing strict and warnings pragmas for submodules.
    - Use non-destructive substitutions inside map.
    - Use the state keyword to simplify the code.
    - Do not replace #PACKAGE# in template mode in Dpkg::Shlibs::SymbolFile.
  * Documentation:
    - Update current default source compressor from gzip to xz.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Simplified Chinese (Zhou Mo). Closes: #786377

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

  [ Updated dselect translations ]
  * German (Sven Joachim).

 -- Guillem Jover <guillem@debian.org>  Mon, 18 May 2015 16:08:17 +0200

dpkg (1.18.0) unstable; urgency=low

  [ Guillem Jover ]
  * Only trim trailing “/” and “/.” from «dpkg-query --search» arguments if
    they are a pathname, and not a pattern or a substring match.
  * Switch C/C++ code to use a new set of C locale character type functions
    independent of the current locale.
  * Add support for arch-bits and arch-endian dpkg-gensymbols tags.
    Closes: #630342
  * Switch perl code from legacy File::Path functions to new ones.
  * Fix perl uninitialized value usage in dpkg-scansources when the Binary
    field is missing.
  * Use dpkg-query instead of dpkg for --search in dpkg-shlibdeps so that
    the subprocesses get the correct admindir. Closes: #775258
  * Rework the Installed-Size field default value computation to make it
    reproducible regardless of the build system filesystem, and document
    how the value is computed and that it is just an approximation.
    Closes: #650077
  * Use strftime() instead of «date -R» in dpkg-genchanges, as the latter